deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "17"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"springboot-demo","namespace":"default"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"springboot-demo"}},"template":{"metadata":{"labels":{"app":"springboot-demo"}},"spec":{"containers":[{"image":"springboot-demo:latest","imagePullPolicy":"IfNotPresent","name":"springboot-demo","ports":[{"containerPort":8080}]}]}}}}
  creationTimestamp: "2026-06-14T21:07:24Z"
  generation: 17
  name: springboot-demo
  namespace: default
  resourceVersion: "41154"
  uid: 5c10aef0-cb62-4be3-9d3d-5641b35842d1
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: springboot-demo
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-06-15T04:40:40+05:30"
      labels:
        app: springboot-demo
    spec:
      containers:
      - image: springboot-demo:v1
        imagePullPolicy: IfNotPresent
        name: springboot-demo
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-06-14T21:07:26Z"
    lastUpdateTime: "2026-06-14T21:07:26Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-06-14T21:07:24Z"
    lastUpdateTime: "2026-06-14T23:10:41Z"
    message: ReplicaSet "springboot-demo-745cbcdbc5" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 17
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
