nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-demo-nodeport
spec:
  type: NodePort
  selector:
    app: springboot-demo
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080
