service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-demo-service
spec:
  type: ClusterIP
  selector:
    app: springboot-demo
  ports:
    - port: 80
      targetPort: 8080
